After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754576 - compositor: input stream is wrongly considered obscured in some cases (regression)
compositor: input stream is wrongly considered obscured in some cases (regres...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal blocker
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-04 14:23 UTC by Thibault Saunier
Modified: 2015-09-04 21:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
compositor: Ensure all arguments to CLAMP are signed int (2.07 KB, patch)
2015-09-04 20:30 UTC, Nirbheek Chauhan
committed Details | Review

Description Thibault Saunier 2015-09-04 14:23:03 UTC
Since:

> commit 9b59bb8630c8574da2a3b0db9c5cc530e7daa535
> Author: Nirbheek Chauhan <nirbheek@centricular.com>
> Date:   Wed Aug 26 15:40:16 2015 +0530

>     compositor: Actually use the output resolution for clamping
    
>     The obscured check in compositor was using the dimensions of the pad to clamp
>     the h/w of the pad instead of the output resolution, and was doing an incorrect
>     calculation to do so. Fix that by simplifying the whole calculation by using
>     corner coordinates. Also add a test for this bug which fell through the cracks,
>     and just skip all the obscured tests if the pad's alpha is 0.0.  
>     https://bugzilla.gnome.org/show_bug.cgi?id=754107


that pipeline:

$ gst-launch-1.0 uridecodebin uri=file://$HOME/gst-validate/gst-integration-testsuites/medias/defaults/matroska/numerated_frames_blue.mkv ! compositor sink_0::xpos=-1 ! video/x-raw,height=240,width=319 ! autovideosink

Outputs a 'checker' instead of outputing the frame with a x-position=-1
Comment 1 Nirbheek Chauhan 2015-09-04 20:30:10 UTC
Created attachment 310681 [details] [review]
compositor: Ensure all arguments to CLAMP are signed int

See commit message for explanation. Moral of the story: don't mix differing integer types in comparisons (or any multi-argument operands).
Comment 2 Thibault Saunier 2015-09-04 21:36:07 UTC
Attachment 310681 [details] pushed as cf786a9 - compositor: Ensure all arguments to CLAMP are signed int
Comment 3 Thibault Saunier 2015-09-04 21:37:01 UTC
Thanks @nirbheek